add user nickname query + docs build
